<resources>
    <string name="app_name">OopProject_Final</string>
    <string name="login">LogIn</string>
    <string name="register">create new account</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="signup">SignUp</string>
    <string name="phone">phone</string>
    <string name="mail">e-mail</string>
    <string name="id">ID</string>
    <string name="confirm_password">confirm password</string>
    <string name="birthdate">date of birth (DD/MM/YYYY)</string>
    <string name="extra_title">already have an account?   </string>
    <string name="sign">SignIn</string>
    <string name="welcome_to_candidate_activity">Welcome to candidate activity</string>
    <string name="view_results">View Results</string>
    <string name="Register">Register</string>
    <string name="already_have_an_account">already have an account?</string>
    <string name="hello_admin">Welcome Admin!</string>
    <string name="profile"><u>Profile</u></string>
    <string name="delete_candidates">Delete Candidates</string>
    <string name="update_candidate_details">Update Candidate Details</string>
    <string name="insert_candidates">Insert Candidates</string>
    <string name="view_candidates">View Candidates</string>
    <string name="id_server"><u>ID Server</u></string>
    <string name="name">name</string>
    <string name="upload_image">upload image</string>
    <string name="back"><u><i><b>Back</b></i></u></string>
    <string name="My_Profile"><u>My Profile</u></string>
    <string name="logout"><u>logout</u></string>
    <string name="LogOut"><u>LogOut</u></string>
    <string name="candidate_name">Candidate Name</string>

</resources>