<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="0dp"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_logout_candidate"
            android:layout_width="186dp"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:textSize="18sp"
            android:clickable="true"
            android:focusable="true"
            android:textColor="@color/green"
            android:text="@string/logout" />

        <TextView
            android:id="@+id/tv_candidate_profile"
            android:layout_width="210dp"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:clickable="true"
            android:focusable="true"
            android:gravity="end"
            android:padding="10dp"
            android:text="@string/profile"
            android:textColor="@color/green"
            android:textSize="18sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/bt_view_result"
        android:layout_width="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:backgroundTint="#FFFCFD"
        android:text="@string/view_results"
        android:textColor="#2DA92D"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ListView
        android:id="@+id/list_view_Candidates"
        android:layout_width="match_parent"
        android:layout_height="666dp"
        android:layout_above="@id/bt_view_result"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="41dp"
        android:layout_marginBottom="-8dp"
        android:background="@color/white"
        android:scrollbars="vertical" />


</RelativeLayout>
