<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:id="@+id/main"
    android:background="@color/white"
    android:gravity="center">

    <TextView
        android:id="@+id/tv_login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginBottom="24dp"
        android:textColor="#0B0707" />

    <!-- Username Label and EditText -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_username_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="phone or email"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_marginStart="4dp"
            android:layout_marginBottom="4dp"/>

        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColor="@color/black"
            android:padding="12dp"
            android:textColorHint="@color/black"
            android:background="@android:drawable/editbox_background"
             />
    </LinearLayout>

    <!-- Password Label and EditText -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_password_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_marginStart="4dp"
            android:layout_marginBottom="4dp"/>

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:padding="12dp"
            android:textColorHint="@color/black"
            android:textColor="@color/black"
            android:layout_marginBottom="24dp"
            android:background="@android:drawable/editbox_background"
            android:autofillHints="password" />
    </LinearLayout>
    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:padding="12dp"
        android:backgroundTint="#19A252"
        android:textColor="@android:color/white"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="12dp"
        android:layout_marginStart="10dp"

        />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:padding="12dp"
        android:backgroundTint="#F8F5F5"
        android:textColor="#000000"
        android:layout_marginEnd="12dp"
        android:layout_marginStart="10dp"
        android:textSize="16sp"/>

</LinearLayout>
